--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -3,7 +3,7 @@
 
 
 FROM quay.io/suhailtechinfo/suhail-v2
-RUN git clone  https:/Venocybertech/github.com//Venocyber-x /root/Venicybertech
+RUN git clone  https:/Venocybertech/github.com//Venocyber-x /root/Venocybertech
 WORKDIR /root/Venocybertech/
 RUN npm install
 EXPOSE 8000
